@startuml
'https://plantuml.com/sequence-diagram

Interface GameStorageInterface {
    + create()
    + read()
    + readBy()
    + update()
    + delete()
}

Interface PlayerStorageInterface {
    + create()
    + read()
    + readBy()
    + update()
    + delete()
}

Interface SessionStorageInterface {
    + createSession()
    + readSession()
    + readSessions()
    + updateAddPlayer()
    + updateCapacityOrDate()
    + updateRemovePlayer()
    + deleteSession()
    + isPlayerInSession()
}

class GameStorage {
    + create()
    + read()
    + readBy()
    + update()
    + delete()
    - dataSource
}

class PlayerStorage {
    + create()
    + read()
    + readBy()
    + update()
    + delete()
    - dataSource
}

class SessionStorage {
    + createSession()
    + readSession()
    + readSessions()
    + updateAddPlayer()
    + updateCapacityOrDate()
    + updateRemovePlayer()
    + deleteSession()
    + isPlayerInSession()
    - dataSource
}

GameStorageInterface <|-- GameStorage
PlayerStorageInterface <|-- PlayerStorage
SessionStorageInterface <|-- SessionStorage

@enduml